コードレビュー修正①

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,11 +135,11 @@
         <div class='item-img-content'>
           <%= image_tag "item-sample.png", class: "item-img" %>
 
-          <% if item.sold_out? %>
+          <%# if item.sold_out? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <% end %>
+          <%# end %>
 
         </div>
         <div class='item-info'>
