--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
     <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
     <%# elsif !@item.sold_out? %>
     
-    <%= link_to "購入画面に進む", new_item_path(@item) ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む","#",class:"item-red-btn"%>
 
    <%# end %>
 
