--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,7 @@
     
     <% else %>
     
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", "#" , date: { turbo: false } class:"item-red-btn"%>
 
     <% end %>
     <% end %>
