idとして記述に修正

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -99,7 +99,7 @@
             <span class="indispensable">必須</span>
           </div>
           <span class="sell-yen">¥</span>
-          <%= f.text_field :price, required: true, class:"price-input" %>
+          <%= f.text_field :price, required: true, id: 'price-input' %>
         </div>
         <div class="price-content">
           <span>販売手数料 (10%)</span>
